# scraping-tools

./: .gitignore  memo.md  pyproject.toml  request_save.py  requirements.txt  videos.json
memo/: base_class.md  plaform_memo.md
scraping_tools/: __init__.py  base_class.py  channelplus.py  common.py  common_func.py  dliste.py  niconico.py  niconicochannel.py  niconicochannelplus.py  youtube.py
scraping_tools/ChannelPlus/: channelplus.py
scraping_tools/DLsite/Maniax/: Circle.py  Work.py
scraping_tools/NicoNico/: niconico.py
scraping_tools/YouTube/: youtube.py
scraping_tools/common/: common_func.py
scraping_tools/youtube/: youtube.py
