[project]
name = "scraping_tools"
version = "0.9.6"
description = "スクレイピング処理を行うスクリプト群"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["scraping_tools*"]
exclude = ["memo*"]